<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/textviewkong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call_kong"
            android:textSize="30sp"
            />
    </LinearLayout>
    
    <LinearLayout
        
        android:layout_weight="3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
        android:id="@+id/call_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_gravity="center"
        android:singleLine="true"
        android:text="@string/call_name"
        android:textSize="30sp"
         />

    <TextView
        android:id="@+id/call_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
		android:layout_gravity="center"
        android:text="@string/call_number"
        android:textSize="20sp"
         />
        
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/hangupcall"
            android:layout_width="200sp"
            android:layout_height="50sp"
            android:text="@string/hangup"
            android:background="@drawable/call_hangup"
            android:textSize="30sp"
            />
    </LinearLayout>

</LinearLayout>